--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -19,6 +19,7 @@ bEnableFOVScaling=True
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ActionButton1",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="CrouchButton",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
